--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "default-network",
-  "version": "0.2.0",
+  "name": "@hivestreaming/default-network",
+  "version": "0.2.0-build.1",
   "description": "A Node.js module to get default gateway and default interface.",
   "main": "src/index.js",
   "scripts": {
